<resources>
    <string name="app_name">Millonario</string>
    <string name="app_settings">Settings</string>
    <string name="app_scores">Scores</string>
    <string name="text_nombre">Nombre</string>
    <string name="edit_nombre">Introducir Nombre</string>
    <string name="text_Aydas">Numero de ayudas en el juego</string>
    <string name="text_amigo">Nombre de amigo</string>
    <string name="edit_amigo">Introducir nombre de amigo</string>
    <string name="add_amigo">Agregar amigo</string>
    <string name="menu_delete">Eliminar Registro</string>
    <string name="menu_help">Info</string>
</resources>
